--- a/app/views/covers/new.html.erb
+++ b/app/views/covers/new.html.erb
@@ -1,4 +1,5 @@
-<h1> Upload a cover </h1>
+<h1 class="mb-4 mt-4">Upload a cover</h1>
+
 <%= form_for(@cover, url: upload_path) do |form| %>
   <%= render "form", form: form %>
 <% end %>
