--- a/app/views/covers/new.html.erb
+++ b/app/views/covers/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="mb-4 mt-4">Upload a cover</h1>
+<h1 class="mb-4 mt-4">Submit a cover</h1>
 
 <%= form_for(@cover, url: upload_path) do |form| %>
   <%= render "form", form: form %>
