--- a/app/views/covers/index.html.erb
+++ b/app/views/covers/index.html.erb
@@ -19,7 +19,7 @@
     <% end %>
 
     <% if cover.blurb.present? %>
-      <blockquote>
+      <blockquote class="blurb">
         <%= simple_format cover.blurb %>
       </blockquote>
     <% end %>
