--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!--
+      What's up Naysh?
+
+      If you want to help out or see how this works check out
+      https://github.com/155pod/cover_tracker
+    -->
+
     <title>155 Covers</title>
 
     <%= csrf_meta_tags %>
