--- a/app/views/covers/index.html.erb
+++ b/app/views/covers/index.html.erb
@@ -1,7 +1,19 @@
 <h1 class="mb-4 mt-4">Latest Covers</h1>
 
+<div class="mb-4 text-end">
+  <%= button_to archive_all_covers_path, { method: :post, class: "btn btn-secondary btn-lg", params: { password: params[:password] }, data: { confirm: "This will archive ALL existing covers. Are you sure?" } } do %>
+    <i class="bi bi-archive"></i>&nbsp;&nbsp;Archive All
+  <% end %>
+</div>
+
 <% @covers.each do |cover| %>
   <div class="border rounded p-4 mb-4">
+    <div class="cover-actions">
+      <%= button_to archive_cover_path(cover), { method: :post, class: "btn btn-secondary btn-sm", params: { password: params[:password] }, data: { confirm: "This will archive the cover '#{cover.song_title}' by #{cover.artist_name}. Are you sure?" }, title: "Archive" } do %>
+        <i class="bi bi-archive"></i>
+      <% end %>
+    </div>
+
     <h4><%= cover.artist_name %> - "<%= cover.song_title %>"</h4>
 
     <%= l cover.created_at, format: :long %><br/>
