--- a/app/views/covers/index.html.erb
+++ b/app/views/covers/index.html.erb
@@ -1,46 +1,12 @@
-<h1 class="mb-4 mt-4">Latest Covers</h1>
+<h1 class="mb-4 mt-4">Current Covers (<%= @covers.size %>)</h1>
 
-<div class="mb-4 text-end">
-  <%= button_to archive_all_covers_path, { method: :post, class: "btn btn-secondary btn-lg", params: { password: params[:password] }, data: { confirm: "This will archive ALL existing covers. Are you sure?" } } do %>
+<div class="mb-4 text-end text-nowrap">
+  <%= link_to admin_archived_path(password: params[:password]), { class: "btn btn-secondary btn-md" } do %>
+    <i class="bi bi-archive"></i>&nbsp;&nbsp;View archived (<%= Cover.discarded.count %>)
+  <% end %>
+  <%= button_to archive_all_covers_path, { method: :post, class: "btn btn-danger btn-lg", form_class: "d-inline", params: { password: params[:password] }, data: { confirm: "This will archive ALL existing covers. Are you sure?" } } do %>
     <i class="bi bi-archive"></i>&nbsp;&nbsp;Archive All
   <% end %>
 </div>
 
-<% @covers.each do |cover| %>
-  <div class="border rounded p-4 mb-4">
-    <div class="cover-actions">
-      <%= button_to archive_cover_path(cover), { method: :post, class: "btn btn-secondary btn-sm", params: { password: params[:password] }, data: { confirm: "This will archive the cover '#{cover.song_title}' by #{cover.artist_name}. Are you sure?" }, title: "Archive" } do %>
-        <i class="bi bi-archive"></i>
-      <% end %>
-    </div>
-
-    <h4><%= cover.artist_name %> - "<%= cover.song_title %>"</h4>
-
-    <%= l cover.created_at, format: :long %><br/>
-    <b>Title:</b> <%= cover.song_title %><br/>
-    <b>Artist:</b> <%= cover.artist_name %>
-    <% if cover.pronouns.present? %>
-      (pronouns: <%= cover.pronouns %>)
-    <% end %>
-    <br />
-
-    <% if cover.artwork.attached? %>
-      <b>Artwork:</b>
-      <% artwork_path = rails_blob_path(cover.artwork, disposition: "inline") %>
-      <%= link_to cover.artwork.blob.filename.sanitized, artwork_path %><br />
-    <% end %>
-
-    <% if cover.blurb.present? %>
-      <blockquote class="blurb">
-        <%= simple_format cover.blurb %>
-      </blockquote>
-    <% end %>
-
-    <% if blob = cover.file.blob %>
-      <%= link_to blob.filename.sanitized, rails_blob_path(cover.file, disposition: "attachment") %>
-      <%= audio_tag rails_blob_path(cover.file, disposition: "inline"), controls: true, autoplay: false, preload: "none", class: "embed-responsive-item" %>
-    <% else %>
-      broken :(
-    <% end %>
-  </div>
-<% end %>
+<%= render "list", covers: @covers %>
