--- a/app/views/covers/_list.html.erb
+++ b/app/views/covers/_list.html.erb
@@ -42,7 +42,7 @@
 
     <% if blob = cover.file.blob %>
       <%= link_to blob.filename.sanitized, rails_blob_path(cover.file, disposition: "attachment"), download: "download" %>
-      <%= audio_tag rails_blob_path(cover.file, disposition: "inline"), controls: true, autoplay: false, preload: "none", class: "embed-responsive-item" %>
+      <%= render "player/player", cover: cover %>
     <% else %>
       broken :(
     <% end %>
