--- a/app/views/covers/index.html.erb
+++ b/app/views/covers/index.html.erb
@@ -1,3 +1,15 @@
+<% content_for(:nav) do %>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light position-sticky top-0 border-bottom" style="z-index: 9999;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">155 Covers</a>
+      <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" id="watch_together_enabled" style="cursor: pointer;">
+        <label class="form-check-label" for="watch_together_enabled">Watch Together (experimental)</label>
+      </div>
+    </div>
+  </nav>
+<% end %>
+
 <h1 class="mb-4 mt-4">Current Covers (<%= @covers.size %>)</h1>
 
 <div class="mb-4 text-end text-nowrap">
