--- a/app/views/covers/index.html.erb
+++ b/app/views/covers/index.html.erb
@@ -3,7 +3,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">155 Covers</a>
       <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" id="watch_together_enabled" style="cursor: pointer;">
+        <input class="form-check-input" type="checkbox" id="watch_together_enabled" style="cursor: pointer;" autocomplete="off">
         <label class="form-check-label" for="watch_together_enabled">Watch Together (experimental)</label>
       </div>
     </div>
