Add volume to player

--- a/app/views/player/_player.html.erb
+++ b/app/views/player/_player.html.erb
@@ -7,5 +7,6 @@
     </button>
     <input type="range" autocomplete="false" class="form-range js-range form-control ps-2 pe-2" min="0" max="100" step="0.1" value="0" />
     <span class="input-group-text js-progress">00:00 / 00:00</span>
+    <input type="range" autocomplete="false" class="form-range js-volume form-control ps-1 pe-1" min="0" max="1" step="0.01" value="1" />
   </div>
 </div>
