--- a/app/views/covers/index_archived.html.erb
+++ b/app/views/covers/index_archived.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:head) do %>
-  <%= javascript_pack_tag 'admin', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'admin' %>
 <% end %>
 
 <h1 class="mb-4 mt-4">Archived Covers (<%= @covers.size %>)</h1>
