--- a/app/views/covers/index.html.erb
+++ b/app/views/covers/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:head) do %>
-  <%= javascript_pack_tag 'admin', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'admin' %>
 <% end %>
 
 <% content_for(:nav) do %>
