--- a/app/views/covers/index.html.erb
+++ b/app/views/covers/index.html.erb
@@ -8,7 +8,7 @@
       <a class="navbar-brand" href="#">155 Covers</a>
       <div class="form-check form-switch">
         <input class="form-check-input" type="checkbox" id="watch_together_enabled" style="cursor: pointer;" autocomplete="off">
-        <label class="form-check-label" for="watch_together_enabled">Watch Together (experimental)</label>
+        <label class="form-check-label" for="watch_together_enabled">Listen Together</label>
       </div>
     </div>
   </nav>
