--- a/app/views/covers/_list.html.erb
+++ b/app/views/covers/_list.html.erb
@@ -28,6 +28,8 @@
       (pronouns: <%= cover.pronouns %>)
     <% end %>
     <br />
+    <b>Preferred start time</b>: <%= cover.start_time %>
+    <br />
 
     <% if cover.artwork.attached? %>
       <b>Artwork:</b>
