--- a/app/views/covers/_form.html.erb
+++ b/app/views/covers/_form.html.erb
@@ -33,8 +33,8 @@
 </div>
 
 <div class="mb-3">
-  <%= form.label :start_time, "Start Time", class: "form-label" %>*
-  <%= form.text_field :start_time, class: "form-control form-control-sm" %>
+  <%= form.label :start_time, "Start Time", class: "form-label" %>
+  <%= form.text_field :start_time, class: "form-control form-control-sm", placeholder: "0:00", title: "timestamp in format MM:SS (ex. 01:55)", pattern: "([0-9]+:)?([0-9][0-9])" %>
 </div>
 
 <div class="mb-3">
