--- a/app/views/player/_player.html.erb
+++ b/app/views/player/_player.html.erb
@@ -1,6 +1,6 @@
 <%= audio_tag rails_blob_path(cover.file, disposition: "inline"), controls: true, autoplay: false, preload: "none", class: "embed-responsive-item", id: "player_#{dom_id(cover)}", hidden: true %>
 
-<div class="container mt-2 js-audio-player" data-target="player_<%= dom_id(cover) %>">
+<div class="container mt-2 js-audio-player" data-target="player_<%= dom_id(cover) %>" data-duration="<%= cover.file.metadata["duration"] %>" data-start-time="<%= cover.start_time_seconds %>">
   <div class="input-group">
     <button class="btn btn-primary js-play-pause">
       <i class="bi bi-play-fill"></i>
