--- a/app/views/covers/_list.html.erb
+++ b/app/views/covers/_list.html.erb
@@ -1,53 +1,55 @@
-<% covers.each_with_index do |cover, idx| %>
-  <div id="<%= dom_id(cover) %>" class="border rounded p-4 mb-4">
-    <div class="cover-actions">
-      <% if cover.discarded? %>
-        <%= button_to unarchive_cover_path(cover), { method: :post, class: "btn btn-primary btn-sm js-remove-cover", params: { password: params[:password] }, data: { target: dom_id(cover) }, title: "Unarchive", remote: true } do %>
-          <i class="bi bi-archive"></i>
+<div id="cover_list">
+  <% covers.each_with_index do |cover, idx| %>
+    <div id="<%= dom_id(cover) %>" class="border rounded p-4 mb-4">
+      <div class="cover-actions">
+        <% if cover.discarded? %>
+          <%= button_to unarchive_cover_path(cover), { method: :post, class: "btn btn-primary btn-sm js-remove-cover", params: { password: params[:password] }, data: { target: dom_id(cover) }, title: "Unarchive", remote: true } do %>
+            <i class="bi bi-archive"></i>
+          <% end %>
+        <% else %>
+          <%= button_to archive_cover_path(cover), { method: :post, class: "btn btn-secondary btn-sm js-remove-cover", params: { password: params[:password] }, data: { target: dom_id(cover) }, title: "Archive", remote: true } do %>
+            <i class="bi bi-archive"></i>
+          <% end %>
         <% end %>
-      <% else %>
-        <%= button_to archive_cover_path(cover), { method: :post, class: "btn btn-secondary btn-sm js-remove-cover", params: { password: params[:password] }, data: { target: dom_id(cover) }, title: "Archive", remote: true } do %>
-          <i class="bi bi-archive"></i>
+      </div>
+
+      <h4 class="cover-title">
+        <small class="text-muted"><span class="cover-index"><%= 1 + idx %></span>.</small>
+        <%= cover.artist_name %> - "<%= cover.song_title %>"
+        <% if cover.discarded? %>
+          <span class="badge bg-secondary">Archived</span>
         <% end %>
-      <% end %>
-    </div>
-
-    <h4>
-      <small class="text-muted"><%= 1 + idx %>.</small>
-      <%= cover.artist_name %> - "<%= cover.song_title %>"
-      <% if cover.discarded? %>
-        <span class="badge bg-secondary">Archived</span>
-      <% end %>
-    </h4>
+      </h4>
 
 
-    <%= l cover.created_at, format: :long %><br/>
-    <b>Title:</b> <%= cover.song_title %><br/>
-    <b>Artist:</b> <%= cover.artist_name %>
+      <%= l cover.created_at, format: :long %><br/>
+      <b>Title:</b> <%= cover.song_title %><br/>
+      <b>Artist:</b> <%= cover.artist_name %>
     <% if cover.pronouns.present? %>
       (pronouns: <%= cover.pronouns %>)
     <% end %>
     <br />
     <b>Preferred start time</b>: <%= cover.start_time %>
-    <br />
+  <br />
 
-    <% if cover.artwork.attached? %>
-      <b>Artwork:</b>
-      <% artwork_path = rails_blob_path(cover.artwork, disposition: "inline") %>
-      <%= link_to cover.artwork.blob.filename.sanitized, artwork_path, target: "_blank" %><br />
-    <% end %>
+  <% if cover.artwork.attached? %>
+    <b>Artwork:</b>
+    <% artwork_path = rails_blob_path(cover.artwork, disposition: "inline") %>
+    <%= link_to cover.artwork.blob.filename.sanitized, artwork_path, target: "_blank" %><br />
+  <% end %>
 
-    <% if cover.blurb.present? %>
-      <blockquote class="blurb">
-        <%= simple_format cover.blurb %>
-      </blockquote>
-    <% end %>
+  <% if cover.blurb.present? %>
+    <blockquote class="blurb">
+      <%= simple_format cover.blurb %>
+    </blockquote>
+  <% end %>
 
-    <% if blob = cover.file.blob %>
-      <%= link_to blob.filename.sanitized, rails_blob_path(cover.file, disposition: "attachment"), download: "download", target: "_blank" %>
-      <%= render "player/player", cover: cover %>
-    <% else %>
-      broken :(
-    <% end %>
-  </div>
-<% end %>
+  <% if blob = cover.file.blob %>
+    <%= link_to blob.filename.sanitized, rails_blob_path(cover.file, disposition: "attachment"), download: "download", target: "_blank" %>
+    <%= render "player/player", cover: cover %>
+  <% else %>
+    broken :(
+  <% end %>
+    </div>
+  <% end %>
+</div>
