--- a/app/views/covers/index_archived.html.erb
+++ b/app/views/covers/index_archived.html.erb
@@ -2,12 +2,17 @@
   <%= javascript_pack_tag 'admin' %>
 <% end %>
 
-<h1 class="mb-4 mt-4">Archived Covers (<%= @covers.size %>)</h1>
-
 <div class="mb-4">
   <%= link_to admin_path(password: params[:password]), { class: "btn btn-primary btn-md" } do %>
     Back to Current Covers
   <% end %>
 </div>
 
+<h1 class="mb-4 mt-4">Archived Covers (<%= @covers.size %>)</h1>
+
 <%= render "list", covers: @covers %>
+
+<h1 class="mb-4 mt-4">Archived B-Sides (<%= @b_sides.size %>)</h1>
+
+<%= render "list", covers: @b_sides %>
+
