--- a/app/views/covers/_list.html.erb
+++ b/app/views/covers/_list.html.erb
@@ -1,6 +1,8 @@
 <%= content_tag(:div, id: (covers.any? && covers.first.b_side? ? "b_side_list" : "cover_list")) do %>
   <% covers.each_with_index do |cover, idx| %>
-    <div id="<%= dom_id(cover) %>" class="border rounded p-4 mb-4">
+    <% cover_classes = cover.b_side? ? "cover b-side" : "cover" %>
+
+    <div id="<%= dom_id(cover) %>" class="<%= cover_classes %> border rounded p-4 mb-4">
       <div class="cover-actions">
         <% if cover.b_side? %>
           <%= button_to toggle_b_side_cover_path(cover), { method: :post, class: "btn btn-secondary btn-sm js-toggle-b-side mx-1", params: { password: params[:password] }, data: { target: dom_id(cover) }, title: "Unmark as B-Side", remote: true } do %>
