--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,6 +31,11 @@ audio {
 	margin-top: 10px;
 }
 
+.cover.selected {
+  background-color: rgba(176,196,222,0.2);
+  transition: background-color 0.2s ease-in-out;
+}
+
 .cover-title {
 	cursor: grab;
 }
