--- a/app/views/covers/index.html.erb
+++ b/app/views/covers/index.html.erb
@@ -23,9 +23,9 @@
 <h1 class="mb-4 mt-4">Current Covers (<%= @covers.size %>)</h1>
 
 <div class="mb-4 text-end text-nowrap">
-  <%= button_to archive_all_covers_path, { method: :post, class: "js-archive-all-covers btn btn-danger btn-lg", form_class: "d-inline", params: { password: params[:password] }, data: { confirm: "This will archive ALL existing covers. Are you sure?" } } do %>
+  <button class="js-archive-covers btn btn-danger btn-lg" id="archive_covers">
     <i class="bi bi-archive"></i>&nbsp;&nbsp;Archive All Covers
-  <% end %>
+  </button>
 </div>
 
 <%= render "list", covers: @covers unless @covers.blank? %>
@@ -33,9 +33,9 @@
 <h1 class="mb-4 mt-4">Current B-Sides (<%= @b_sides.size %>)</h1>
 
 <div class="mb-4 text-end text-nowrap">
-  <%= button_to archive_b_sides_covers_path, { method: :post, class: "js-archive-all-b-sides btn btn-danger btn-lg", form_class: "d-inline", params: { password: params[:password] }, data: { confirm: "This will archive ALL existing covers. Are you sure?" } } do %>
+  <button class="js-archive-b-sides btn btn-danger btn-lg" id="archive_b_sides">
     <i class="bi bi-archive"></i>&nbsp;&nbsp;Archive All B-Sides
-  <% end %>
+  </button>
 </div>
 
 <%= render "list", covers: @b_sides unless @b_sides.blank? %>
