--- a/app/views/covers/_list.html.erb
+++ b/app/views/covers/_list.html.erb
@@ -42,11 +42,8 @@
 
   <% if cover.artwork.attached? %>
     <b>Artwork:</b>
-    <%= link_to(
-      cover.artwork.blob.filename.sanitized,
-      cover.artwork.variant(resize_to_limit: [1440,1440]).processed.url,
-      target: "_blank"
-    ) %><br />
+    <% artwork_path = rails_blob_path(cover.artwork, disposition: "inline") %>
+    <%= link_to cover.artwork.blob.filename.sanitized, artwork_path, target: "_blank" %><br />
   <% end %>
 
   <% if cover.blurb.present? %>
