Don't process images all at once
For now, let's only load `artwork.variant.processed.url`s if someone has
explicitly clicked a link to see the cover artwork. We can do this by
just using another controller action for now.

--- a/app/views/covers/_list.html.erb
+++ b/app/views/covers/_list.html.erb
@@ -44,11 +44,9 @@
     <b>Artwork:</b>
     <%= link_to(
       cover.artwork.blob.filename.sanitized,
-      cover.artwork.variable? ?
-        cover.artwork.variant(resize_to_limit: [1440,1440]).processed.url :
-          rails_blob_path(cover.artwork, disposition: "inline"),
-      target: "_blank"
-    ) %><br />
+      artwork_cover_path(cover), target: "_blank"
+    ) %>
+    <br />
   <% end %>
 
   <% if cover.blurb.present? %>
