Ensure Sortable JS always works
We need to make sure the `<div>`s with the IDs `cover_list` and
`b_sides_list` always exist until I permanently kill those. I promise to
kill them.

--- a/app/views/covers/_list.html.erb
+++ b/app/views/covers/_list.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag(:div, id: (covers.any? && covers.first.b_side? ? "b_side_list" : "cover_list")) do %>
+<%= content_tag(:div, id: id) do %>
   <% covers.each_with_index do |cover, idx| %>
     <% cover_classes = cover.b_side? ? "cover b-side" : "cover" %>
 
