--- a/app/views/covers/index_archived.html.erb
+++ b/app/views/covers/index_archived.html.erb
@@ -10,9 +10,9 @@
 
 <h1 class="mb-4 mt-4">Archived Covers (<%= @covers.size %>)</h1>
 
-<%= render "list", covers: @covers %>
+<%= render "list", covers: @covers, id: "cover_list" %>
 
 <h1 class="mb-4 mt-4">Archived B-Sides (<%= @b_sides.size %>)</h1>
 
-<%= render "list", covers: @b_sides %>
+<%= render "list", covers: @b_sides, id: "b_sides_list" %>
 
