--- a/app/views/submissions/success.html.erb
+++ b/app/views/submissions/success.html.erb
@@ -1,6 +1,6 @@
 <div class="text-center mt-4">
   <h1>Success!</h1>
   <p class="lead">
-    We got your cover. Thanks for submitting! 🤟
+    We got it. Thanks for submitting! 🤟
   </p>
 </div>
