--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -5,7 +5,7 @@
 <% content_for(:nav) do %>
   <nav class="navbar navbar-expand-lg navbar-light bg-light position-sticky top-0 border-bottom" style="z-index: 9999;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">155 Covers</a>
+      <a class="navbar-brand" href="#">Tracker</a>
       <div class="form-check form-switch">
         <input class="form-check-input" type="checkbox" id="watch_together_enabled" style="cursor: pointer;" autocomplete="off">
         <label class="form-check-label" for="watch_together_enabled">Listen Together</label>
@@ -16,19 +16,22 @@
 
 <div class="mb-4 text-end text-nowrap">
   <%= link_to admin_archived_path(password: params[:password]), { class: "btn btn-secondary btn-md" } do %>
-    <i class="bi bi-archive"></i>&nbsp;&nbsp;View archived (<%= Cover.discarded.count %>)
+    <i class="bi bi-archive"></i>&nbsp;&nbsp;View archived (<%= Submission.discarded.count %>)
   <% end %>
 </div>
 
-<h1 class="mb-4 mt-4">Current Covers (<%= @covers.size %>)</h1>
+<h1 class="mb-4 mt-4">Current Submissions (<%= @submissions.size %>)</h1>
 
 <div class="mb-4 text-end text-nowrap">
-  <button class="js-archive-covers btn btn-danger btn-lg" id="archive_covers">
-    <i class="bi bi-archive"></i>&nbsp;&nbsp;Archive All Covers
+  <button
+    class="js-archive-submissions btn btn-danger btn-lg"
+    id="archive_submissions"
+  >
+    <i class="bi bi-archive"></i>&nbsp;&nbsp;Archive All
   </button>
 </div>
 
-<%= render "list", covers: @covers, id: "cover_list" %>
+<%= render "list", submissions: @submissions, id: "submission_list" %>
 
 <h1 class="mb-4 mt-4">Current B-Sides (<%= @b_sides.size %>)</h1>
 
@@ -38,4 +41,4 @@
   </button>
 </div>
 
-<%= render "list", covers: @b_sides, id: "b_side_list" %>
+<%= render "list", submissions: @b_sides, id: "b_side_list" %>
