--- a/app/views/submissions/index_archived.html.erb
+++ b/app/views/submissions/index_archived.html.erb
@@ -4,15 +4,15 @@
 
 <div class="mb-4">
   <%= link_to admin_path(password: params[:password]), { class: "btn btn-primary btn-md" } do %>
-    Back to Current Covers
+    Back to Current Submissions
   <% end %>
 </div>
 
-<h1 class="mb-4 mt-4">Archived Covers (<%= @covers.size %>)</h1>
+<h1 class="mb-4 mt-4">Archived Submissions (<%= @submissions.size %>)</h1>
 
-<%= render "list", covers: @covers, id: "cover_list" %>
+<%= render "list", submissions: @submissions, id: "submission_list" %>
 
 <h1 class="mb-4 mt-4">Archived B-Sides (<%= @b_sides.size %>)</h1>
 
-<%= render "list", covers: @b_sides, id: "b_sides_list" %>
+<%= render "list", submissions: @submissions, id: "b_sides_list" %>
 
