--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
       https://github.com/155pod/cover_tracker
     -->
 
-    <title>155 Covers</title>
+    <title>Cover Tracker</title>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
